[gd_scene load_steps=2 format=3 uid="uid://1oii0lj1k250"]

[ext_resource type="Script" uid="uid://baqg8r261xiu" path="res://components/apps/conways_game/conways_game.gd" id="1_mytmk"]

[node name="ConwaysGameUi" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_mytmk")
window_title = "Conway's Game"
app_description = "Waste time futzing around with the teeniest little life simulation ever imagined. A faithful recreation of John Conway's Game of Life."
default_window_size = Vector2(500, 500)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="PlayPauseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PLAY"

[node name="ResetButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RESET"

[node name="SpeedSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 2.0
step = 0.1
value = 1.9

[node name="ColorPicker" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
